add fonts bunny, theme basic styles, theme toggle

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- Bunny Fonts -->
+		<link rel="preconnect" href="https://fonts.bunny.net">
+		<link href="https://fonts.bunny.net/css?family=alfa-slab-one:400|maven-pro:400,700" rel="stylesheet" />
+		<!-- App Global Styles -->
+		<link rel="stylesheet" href="style_guide.css" />
+		<link rel="stylesheet" href="app.css" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
