--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,8 @@
 		<link href="https://fonts.bunny.net/css?family=alfa-slab-one:400|maven-pro:400,700" rel="stylesheet" />
 		<!-- App Global Styles -->
 		<link rel="stylesheet" href="style_guide.css" />
+		<!-- Plausible -->
+		<script defer data-domain="bitcoinvsstocks.com" src="https://plausible.io/js/script.js"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
