--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,8 @@
 		<!-- App Global Styles -->
 		<link rel="stylesheet" href="style_guide.css" />
 		<!-- Plausible -->
-		<script defer data-domain="bitcoinvsstocks.com" src="https://plausible.io/js/script.js"></script>
+		<script defer data-domain="bitcoinvsstocks.com" src="https://plausible.io/js/script.tagged-events.js"></script>
+		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
