--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,8 @@
 		<!-- Plausible -->
 		<script defer data-domain="bitcoinvsstocks.com" src="https://plausible.io/js/script.tagged-events.js"></script>
 		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+		<!-- Twentyuno widget -->
+		<script src="https://embed.twentyuno.net/js/app.js"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
