--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,7 @@
 		<meta name="twitter:creator" content="@GianlucaTassara">
 		<meta name="twitter:title" content="Bitcoin vs Stocks: DCA Calculator">
 		<meta name="twitter:description" content="Compare the results of dollar cost averaging (DCA) in Bitcoin versus stocks, indexes and precious metals.">
-		<meta name="twitter:image" content="%sveltekit.assets%/page_screenshot.png">
+		<meta name="twitter:image" content="https://bitcoinvsstocks.com/page_screenshot.png">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
